--- a/gb/23/4/30/n13985357.md
+++ b/gb/23/4/30/n13985357.md
@@ -1,36 +1,36 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>耿和：人权律师高智晟先生</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13829648-Screen-Shot-2022-09-21-at-6.56.44-AM-600x400.png" />
 <h6>2022年9月20日，一幅用7355枚子弹壳拼制成的高智晟艺术头像浮雕在美国华盛顿DC的共产主义受难者纪念馆公开展出。（李辰／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年05月01日讯】自从2004年以来，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E6%99%BA%E6%99%9F.md#1">高智晟</a>先生为中国人权呼吁、抗争，已经20年过去了。其间，他被失去自由的时间总计达18年之久。这没有自由的18年，由失踪、软禁、坐牢与被酷刑构成。在中国，他为了中国的人权、社会正义以及最终实现民主宪政，付出了极其高昂的个人代价。高智晟从2017年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A2%AB%E5%A4%B1%E8%B8%AA.md#1">被失踪</a>以来，至今杳无音讯。我们强烈呼吁全世界所有爱好自由与享受着自由的人予以持续的关注，要求中国政府立即释放高智晟律师。</p>
-<p>中国，一个安理会常任理事国，世界第二大经济体，口口声声对外宣扬自己是个负责任的大国，然而，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E6%99%BA%E6%99%9F.md#1">高智晟</a>先生，作为一位和平理性的人权律师，却一直被中共政权迫害。这个简单明了的事实，自由世界的各国政府在与中共打交道时，都不应该忘记。<br />
-<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A2%AB%E5%A4%B1%E8%B8%AA.md#1">被失踪</a>的高智晟先生，他不仅是中国的良心，更是中国的脊梁。他身体力行，用自己全部的精力和生命为每一个中国人的自由而抗争不息，作为基督徒，他无可畏惧的精神一直影响着每一个有良知的人！</p>
+	<p>【大纪元2023年05月01日讯】自从2004年以来，高智晟先生为中国人权呼吁、抗争，已经20年过去了。其间，他被失去自由的时间总计达18年之久。这没有自由的18年，由失踪、软禁、坐牢与被酷刑构成。在中国，他为了中国的人权、社会正义以及最终实现民主宪政，付出了极其高昂的个人代价。高智晟从2017年被失踪以来，至今杳无音讯。我们强烈呼吁全世界所有爱好自由与享受着自由的人予以持续的关注，要求中国政府立即释放高智晟律师。</p>
+<p>中国，一个安理会常任理事国，世界第二大经济体，口口声声对外宣扬自己是个负责任的大国，然而，高智晟先生，作为一位和平理性的人权律师，却一直被中共政权迫害。这个简单明了的事实，自由世界的各国政府在与中共打交道时，都不应该忘记。</p>
+<p>被失踪的高智晟先生，他不仅是中国的良心，更是中国的脊梁。他身体力行，用自己全部的精力和生命为每一个中国人的自由而抗争不息，作为基督徒，他无可畏惧的精神一直影响着每一个有良知的人！</p>
 <h2>一、最近一次的失踪</h2>
 <p>高智晟先生在2014年出狱回到老家后，一直与哥哥嫂嫂住在一起。那是一处陕北窑洞小院，也是他继续被软禁之所，因为政治犯出了监狱也是没有人身自由的，这是中国的现实。</p>
-<p>2017年8月13日上午9点多，他的嫂嫂去他住的窑洞喊他吃饭，却发现人不见了。迄今，已经5年多，超过了2000个日日夜夜。他在美国的妻子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%80%BF%E5%92%8C.md#1">耿和</a>和两个孩子，一直无法得到关于他的任何消息。他可能还活着，但是已经丧失了个人的人身自由，失去了他的家庭温暖和个人健康。而他的家人和亲人们，也同样深受中共非人性的迫害与折磨，至今创伤未平，一直处于担心与焦虑之中。<br />
-而这，并不是他唯一的一次失踪。在他近20年的抗争岁月里，被失踪了6次以上。</p>
+<p>2017年8月13日上午9点多，他的嫂嫂去他住的窑洞喊他吃饭，却发现人不见了。迄今，已经5年多，超过了2000个日日夜夜。他在美国的妻子耿和和两个孩子，一直无法得到关于他的任何消息。他可能还活着，但是已经丧失了个人的人身自由，失去了他的家庭温暖和个人健康。而他的家人和亲人们，也同样深受中共非人性的迫害与折磨，至今创伤未平，一直处于担心与焦虑之中。</p>
+<p>而这，并不是他唯一的一次失踪。在他近20年的抗争岁月里，被失踪了6次以上。</p>
 <h2>二、成长经历</h2>
 <p>高智晟先生完全靠自学大学法律本科毕业，通过了考试后获得律师专业证书，从而成为了一名律师。自学成为律师，而后成为一位著名的律师，他的个人成长经历可谓是一个民间奇迹。</p>
-<p>1963年，他出生于陕西省佳县佳芦镇小石板桥村的一眼窑洞里，家境十分贫寒，他是家里7个兄弟姐妹中的第5个孩子。11岁时他的父亲就去世了，兄弟姐妹们从此和母亲一起艰难度日。高智晟很爱读书学习，16岁那年，他考进了县重点中学，但是家里供不起他，被迫中断学业回家务农。他还曾下煤窑挖煤两年，但没有得到一分钱的报酬。21岁那年，为了有饭吃，他报名参了军。他与妻子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%80%BF%E5%92%8C.md#1">耿和</a>就是在新疆服役期间认识的，于1990年结婚。</p>
+<p>1963年，他出生于陕西省佳县佳芦镇小石板桥村的一眼窑洞里，家境十分贫寒，他是家里7个兄弟姐妹中的第5个孩子。11岁时他的父亲就去世了，兄弟姐妹们从此和母亲一起艰难度日。高智晟很爱读书学习，16岁那年，他考进了县重点中学，但是家里供不起他，被迫中断学业回家务农。他还曾下煤窑挖煤两年，但没有得到一分钱的报酬。21岁那年，为了有饭吃，他报名参了军。他与妻子耿和就是在新疆服役期间认识的，于1990年结婚。</p>
 <p>退役后，高智晟先生留在新疆，陆续在一些工厂打工，甚至在街头买菜谋生。其间，他萌生了通过自学而成为一名律师的想法。在打工之余他就读书自学法律，经过了五六年的业余苦读，1994年他通过了中国的法律专业高等教育自学考试。1995年，高智晟又通过了律师资格考试，成为一名律师，并于次年开始在乌鲁木齐执业。那年，他32岁。</p>
-<p>高智晟先生在乌鲁木齐执业期间，约四分之三的案件都是帮助弱势群体打免费的维权官司。他的想法很简单：“我的出身很穷，我知道穷人的感情，所以我知道我要做什么。…… 我不会把帮助别人看成是对别人的施舍。我的目光很长远，我要用我的这一辈子拯救我的下一辈子！”他认为一名律师就应当为弱势者撑腰，所以决心尽其所能为中国的弱势者维护合法权益。2000年，他到了北京，创立了晟智律师事务所并陆续聘请了约20名律师。他给自己的职业生涯定下了规矩：所接受的案例中，三分之一都为穷人弱势群体免费打官司。</p>
+<p>高智晟先生在乌鲁木齐执业期间，约四分之三的案件都是帮助弱势群体打免费的维权官司。他的想法很简单：“我的出身很穷，我知道穷人的感情，所以我知道我要做什么。……我不会把帮助别人看成是对别人的施舍。我的目光很长远，我要用我的这一辈子拯救我的下一辈子！”他认为一名律师就应当为弱势者撑腰，所以决心尽其所能为中国的弱势者维护合法权益。2000年，他到了北京，创立了晟智律师事务所并陆续聘请了约20名律师。他给自己的职业生涯定下了规矩：所接受的案例中，三分之一都为穷人弱势群体免费打官司。</p>
 <p>无论在新疆还是在北京，高智晟先生不仅经常免费为弱势群体打官司维权，还经常自掏腰包，资助一些非常困难的当事人。2001年，他被中国司法部授予“中国十大杰出律师”荣誉称号。</p>
 <h2>三、为自由、人权而抗争</h2>
 <h3>1、抗争开始</h3>
 <p>高智晟先生为人权而抗争是从2004年底代理和调查法轮功学员黄伟的案例开始的。在调查过程中，中共当局镇压平和善良的平民使用的残暴手段震惊了他。法轮功学员以静坐的方式坚持他们的信仰，并且以此健身和修练，但是当局对他们进行残酷的肉体折磨，甚至造成多人死亡。他发现，中共镇压和迫害公民的机构就如同黑社会一样黑暗与残暴。</p>
 <p>于是他决定向中国最高领导层上书陈情，请求他们尊重法轮功学员的信仰自由和合法的人身自由与公民权利，先后上书了四次：<br />
 （参见，例如 <ahref="https://groups.google.com/g/lihlii/c/DuYeqPXHdyY?pli=1">https://groups.google.com/g/lihlii/c/DuYeqPXHdyY?pli=1</a> ）</p>
-<p>2004年12月31日，《高智晟致全国人大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%BC%80%E4%BF%A1.md#1">公开信</a>》<br />
-2005年10月18日，《停止迫害自由信仰者，改善同中国人民的关系 ― 高智晟致胡锦涛主席、温家宝总理的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%BC%80%E4%BF%A1.md#1">公开信</a>》<br />
+<p>2004年12月31日，《高智晟致全国人大公开信》<br />
+2005年10月18日，《停止迫害自由信仰者，改善同中国人民的关系 ― 高智晟致胡锦涛主席、温家宝总理的公开信》<br />
 2005年11月22日，《致胡锦涛、温家宝第二封公开信》<br />
 2005年12月12日，《必须立即停止灭绝我们民族良知和道德的野蛮行径 ― 高智晟致胡锦涛、温家宝及中国同胞的公开信》</p>
 <p>从他的第一封公开信开始，中共当局就开始了对他的跟踪、监视和迫害，经常派出多人尾随他，即便到外地出差，也如影随形地跟着。他家楼下经常停着十几辆甚至二十多辆国保的车，数十人驻扎在他家周围，监视和骚扰他与家人的日常生活。他的周边邻居们的生活，也因此受到惊扰。高智晟将这些情况都写在他的上书和公开信里。</p>
 <p>2005年，中共当局勒令他的律师事务所停业整顿，并扣押了营业执照和执业证书。不但对他的上书陈情充耳不闻，而且变本加厉地迫害他和他的家人。这令他对中共彻底失望，2005年12月13日，他发出了退党声明，公开宣布与妻子耿和一起，退出中国共产党组织。因此他也改变了他的信仰，在2005年受洗成为基督徒。<br />
-《高智晟退出共产党的书面声明》<ahref="https://github.com/19920513/djy/blob/master/gb/5/12/13/n1152477.md#1">https://github.com/19920513/djy/blob/master/gb/5/12/13/n1152477.md#1</a></p>
+《高智晟退出共产党的书面声明》<ahref="https://github.com/1992513/djy/blob/master/gb/5/12/13/n1152477.md#1">https://github.com/1992513/djy/blob/master/gb/5/12/13/n1152477.md#1</a></p>
 <h3>2、遭迫害开始</h3>
 <p>2006年3月涉嫌活摘法轮功学员人体器官的“苏家屯事件”曝光，高智晟先生公开表示参与调查，并公开邀请加拿大前亚太司长大卫·乔高和国际人权律师大卫·麦塔斯介入调查，但他们都被中共当局阻拦，不能进行任何实际调查。</p>
 <p>同年，他积极参与广东太石村村民以及汕尾农民的维权事件，为这些合法权利受到严重侵害的农民群体公开发声。他发起了维权接力绝食，成立“维权绝食团”，声援维权的农民们，获得了中国25省人士响应。后来香港、台湾法律界及政治人物也纷纷响应，扩大为世界四大洲几十个国家和地区的全球接力绝食。但许多中国大陆绝食者、志愿者遭当局绑架失踪，高智晟也受到特务的监控骚扰。2月13日他发出《每个人都能行，用自己的身体 在自己的家里》，呼吁绝食接力。3月6日“全球万人绝食”启动。</p>
@@ -43,8 +43,8 @@
 <h4>第一次</h4>
 <p>在缓刑软禁在家期间，高智晟先生并没有屈服。2007年9月12日，他发表了《致美国国会公开信》，用1.3万字描述了中国人权实况，呼吁当时的美国总统及其国会效法前总统里根抵制出席2008年的北京奥运。公开信发出后，他被带走，失踪逾50天。</p>
 <p>2009年2月9日的网络上流传出一篇高智晟先生署名、写于2007年11月28日被北京警察围困在家中的文章《黑夜、黑头套、黑帮绑架》。文章详细描述了他在2007年被秘密绑架后的50多天里遭受的严重的酷刑。该文引起了美国、法国、德国等多国媒体的关注。骇人听闻的酷刑如，国保们以电击、竹签捅生殖器，用烟头烫鼻子与眼睛，以及其他多种施于肉体和精神方面的酷刑。国保们表明是以“对待法轮功的酷刑”方式对待他，并声称他不可能活着出去。中共当局还曾经以多种酷刑手段逼他写批判法轮功的文字，但未能如愿。不过高智晟先生在被释放前做了部分的妥协，即在假笔录上签名“政府没有绑架高智晟，没有酷刑折磨高智晟，对高智晟全家关爱倍至”。这个部分妥协的原因是国保威胁他若把酷刑向外界透露，将在他的妻女面前折磨他，并且威胁说他的女儿将会被搞死。</p>
-<p>在这篇五千多字的文章中，他写道：“…… 四支电警棍开始电击我，我感到所击之处，五脏六腑、浑身肌肉像自顾躲避似的在皮下急速跳躲。我痛苦的满地打滚，当王姓头目开始电击我的生殖器时，我向他求饶过。我的求饶换来的是一片大笑和更加疯狂的折磨。 …… 期间有过许多奇异的感觉，诸如：有时候能真真切切地听到死，有时又能真真切切地听到生。到第十二、三天后我完全睁开眼时，我发现全身的外表变得很可怕，周身没有一点正常的皮肤 ……”<br />
-《至美国国会公开信》与《黑夜、黑头套、黑帮绑架》的链接， 见，例如： <ahref="https://groups.google.com/g/lihlii/c/DuYeqPXHdyY?pli=1">https://groups.google.com/g/lihlii/c/DuYeqPXHdyY?pli=1</a></p>
+<p>在这篇五千多字的文章中，他写道：“…… 四支电警棍开始电击我，我感到所击之处，五脏六腑、浑身肌肉像自顾躲避似的在皮下急速跳躲。我痛苦的满地打滚，当王姓头目开始电击我的生殖器时，我向他求饶过。我的求饶换来的是一片大笑和更加疯狂的折磨。……期间有过许多奇异的感觉，诸如：有时候能真真切切地听到死，有时又能真真切切地听到生。到第十二、三天后我完全睁开眼时，我发现全身的外表变得很可怕，周身没有一点正常的皮肤……”<br />
+《至美国国会公开信》与《黑夜、黑头套、黑帮绑架》的链接，见，例如： <ahref="https://groups.google.com/g/lihlii/c/DuYeqPXHdyY?pli=1">https://groups.google.com/g/lihlii/c/DuYeqPXHdyY?pli=1</a></p>
 <h4>第二次</h4>
 <p>2009年2月4日，高智晟先生在陕西的老家里被超过200名警察带走后，再次失踪，长时间下落不明。后来方知遭单独囚禁及酷刑。美国德州基督教团体对华援助协会，曾为此收集了15万人的签名，要求中国释放他。这次失踪期间，海外多个人权机构呼吁中国政府公开高智晟信息，但中共当局不予理会。</p>
 <p>2010年3月28日，耿和突然接到她丈夫高智晟的电话，说他身在山西五台山。经过长达14个月失踪后他突然再次“回到”人间。在国际社会持续压力下，4月7日，高智晟被允许回到北京，并在北京接受了美联社的采访。美联社4月下旬的报导证实，高智晟先生在2009年被失踪后，遭到了长达14个月的非法关押，期间所受酷刑程度“没有言语可以形容”，比起在2007年被失踪期间，中共当局对他所施酷刑更加严重，例如国保们曾脱光他的衣服，轮流用手枪打他，甚至连续殴打了两天两夜。</p>
@@ -52,7 +52,7 @@
 <p>在被美联社采访后，不过两星期，高智晟先生再次被强迫失踪，长达20个月。这次他被失踪后，美联社决定公开高智晟在专访中的更多的秘密谈话（在访谈中他原先表明暂不公开），主要是前次失踪期间所遭受的酷刑的可怕细节。耿和获悉后非常难过，她向记者表示，从他接受专访的照片看，他的整个相貌发生了变化，脸型都已经变得扭曲了。他一定经历了非常残酷、非人的虐待，跟2009年初相比，不过一年多的时间，却看上去将近老了二十岁！</p>
 <h3>5、夫人、孩子逃亡国外</h3>
 <p>从2005年开始，中共就派出大批国保跟踪、监视和骚扰高智晟先生以及他的家人，他的夫人和两个孩子。当时，他的女儿12岁，儿子才1岁。他们全家经常被软禁在家，不许出去，如果外出，则多人跟踪，就连他女儿上学也常规性地被6-10名国保尾随跟踪到教室，在教室继续监视。遭到这样的特殊待遇，使他女儿在学校被学生和老师另眼相待。一段时间后，他女儿产生了心理问题，拒绝再去学校读书，甚至一度想自杀。到了2007年，国保的跟踪，甚至连他3岁的儿子也不放过，每天会有不低于4名国保跟踪、监视这个孩子。高智晟在《给美国国会的公开信》中曾描述了国保跟踪、围困他和家人的情况。</p>
-<p>高智晟先生在一篇2007年9月传到境外的文章中指出，中共当局为了彻底击垮他，把他的妻子和孩子们“做人质”。“除电视机、电灯外，一切标志着今日人类文明的设施我们都恍如隔世。我们被强制不许见任何还活着的我们以外的同类。我们家成了囚禁我们四人的场所。我们成了这个时代人类最为孤独的人。 ”“这样的做法是对整个人类道德文明的公然的、公开的、持续的挑衅和践踏。”</p>
+<p>高智晟先生在一篇2007年9月传到境外的文章中指出，中共当局为了彻底击垮他，把他的妻子和孩子们“做人质”。“除电视机、电灯外，一切标志着今日人类文明的设施我们都恍如隔世。我们被强制不许见任何还活着的我们以外的同类。我们家成了囚禁我们四人的场所。我们成了这个时代人类最为孤独的人。”“这样的做法是对整个人类道德文明的公然的、公开的、持续的挑衅和践踏。”</p>
 <p>2009年1月9日，不堪常年被国保围困、折磨的妻子耿和，决定为了孩子冒险离开中国。她在友人协助下带着16岁的女儿和5岁的儿子，从云南偷渡到泰国，历经艰险之后在3月12日抵达美国。他们母子三人很快就获得了美国政府的政治庇护，在美国定居下来。从此，高智晟先生一家人远隔重洋。</p>
 <h3>6、沙漠监狱，三年地狱</h3>
 <p>2011年12月16日，根据中共新华社的报导，高智晟先生的缓刑被法院撤销，他将被送往监狱服刑3年。他的亲人曾于2012年1月到监狱探监遭拒绝，一度引发外界担忧高智晟先生已经被死亡。</p>
@@ -120,48 +120,39 @@
 《爸爸的故事》<br />
 根据该书稿编写的其中的一些独立而有关联的、通俗易读的故事已经发表在《大纪元》，并被其他一些网站转载：<ahref="https://bit.ly/3GJ37HK">https://bit.ly/3GJ37HK</a></p>
 <p>本文成文于2023年4月20日高智晟先生59岁生日</p>
-<p>——大纪元首发</p>
+<p>——大纪元首发◇</p>
 <p>责任编辑：高义</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/30/n13985005.md#1">【网海拾贝】中共颠覆美国的野心超乎想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983693.md#1">英慧：罗网</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982671.md#1">【网海拾贝】卢沙野是口误还是故意唱白脸？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981963.md#1">【网海拾贝】卢沙野言论损害中国，习近平会如何反应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308070.md#1">【网海拾贝】肮脏不堪的中共体育界</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307254.md#1">刘宇：声援大翻译运动 呼吁民主国家制裁中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305490.md#1">【网海拾贝】举国体制可以休矣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304382.md#1">【网海拾贝】中共对民众监控已走火入魔</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/14/n10713843.md#1" target="_blank">德国绿嫩市政府官方网页推荐法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975486.md#1">【天道有知】为人着想 给人一食救了自己</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981727.md#1">【未解之谜】美人鱼探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975122.md#1">冥冥之中有定数：注定生贵子的李陵容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971707.md#1">李白七言绝句赏析——灵动奇绝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980703.md#1">美国灵媒谈濒死体验：我看见最美的光和天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/29/n13984483.md#1">【十字路口】热门韩剧《黑暗荣耀》警示中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/30/n13984745.md#1">【舞蹈三剑客】那一年，为什么我没有在神韵跳舞？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/29/n13984547.md#1">【拍案惊奇】四条战线抑中共 大陆网民拒上战场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983711.md#1">中共发改委高官被官网除名 传涉丑闻被降级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983122.md#1">中共修订反间谍法制造恐慌 美国会回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983119.md#1">【菁英论坛】乌克兰大反攻 决定中俄命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983025.md#1">周星驰监制动画片《美猴王》 主角造型引吐槽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983191.md#1">陈佩斯否认坐拥万亩良田 与退耕还林有关？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983987.md#1">再摘“百想艺术大赏”影后 汤唯直呼不可思议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13984053.md#1">欠债4千万遭法院强制执行 李亚鹏自认失败</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983089.md#1">陆毅鲍蕾现身网红婚礼献唱 夫妻着一身黑惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983640.md#1">波兰村庄数千居民都住同一条街 绵延9公里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980555.md#1">这种油是慢性病祸首 医生警告一定不要吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922836.md#1">这12件事最伤肾！保肾就常喝1种粥、常按4穴位</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983015.md#1">2种癌症中晚期不用怕！生物标记检测有助逆转</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983236.md#1">苹果醋减肥护血管 医生教你这样喝最有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/30/n13985357.htm">耿和：人权律师高智晟先生</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/30/n13985357.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/30/n13985357.htm">耿和：人权律师高智晟先生</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/30/n13985357.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
